# RAG-video-transcripts

./: .gitignore  README.md  app.py  fetch_transcripts.py  populate_database.py  pyproject.toml  rag.py
