[project]
name = "rag-video-transcripts"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Taillieu",email = "vic8.taillieu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "youtube-transcript-api (>=1.2.4,<2.0.0)",
    "langchain-core (>=1.2.19,<2.0.0)",
    "langchain-text-splitters (>=1.1.1,<2.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "langchain-huggingface (>=1.2.1,<2.0.0)",
    "sentence-transformers (>=5.3.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
